--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.3.1",
     "react-html-table-to-excel": "^2.0.0",
+    "react-iframe": "^1.8.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
