Favicon upload was added to the application...

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "serve-favicon": "^2.5.0",
     "setimmediate": "^1.0.5",
     "shortid": "^2.2.8",
     "stream-buffers": "^3.0.2",
