--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "DataView gas analyst",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "favicon.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     }
   ],
   "start_url": "./index.html",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#ddddff",
   "background_color": "#ffffff"
 }
